--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Ticket Service
+spring.datasource.url=jdbc:postgresql://localhost:5432/Ticket-service
+spring.datasource.username=admin
+spring.datasource.password=Zxcdsaqwe
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
+server.port=8080
+
+jwt.secret=your_jwt_secret_key
+jwt.expiration.access=3600000
+jwt.expiration.refresh=86400000
