--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 server.port=8080
 
-jwt.secret=your_jwt_secret_key
+jwt.secret=jwt_secret_key
 jwt.expiration.access=3600000
 jwt.expiration.refresh=86400000
